# dprint-plugin-yaml

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: format.rs  lib.rs  wasm_plugin.rs
src/configuration/: mod.rs  resolve.rs
tests/: test.rs
tests/specs/: base.txt
