[package]
name = "dprint-plugin-yaml"
version = "0.1.0"
authors = ["Tristan F. <leodog896@gmail.com>"]
edition = "2021"
homepage = "https://github.com/LeoDog896/dprint-plugin-yaml"
license = "MIT"
repository = "https://github.com/LeoDog896/dprint-plugin-yaml"
description = "YAML formatter for dprint."

[dependencies]
anyhow = "1.0"
dprint-core = { version = "0.65", features = ["wasm", "formatting"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
serde_yaml = "0.9"

[dev-dependencies]
dprint-development = "0.9.5"
serde_json = { version = "1.0" }

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]
